trunk/Archive2/78/a2f27e39fb54b2/output
main.cpp:5:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:10:34: error: 'scanf_s' was not declared in this scope
     scanf_s("%s %s", name,surname); //_s bec of microsoft visual stduio. two seperate scanf_s work
                                  ^
